--- a/VRChat/00/1352300.html
+++ b/VRChat/00/1352300.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/34d02bac3ae4f808674f.js" defer=
+    "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "FPTZSHdyQTgT+ms0SymKAWk+K3MjqZqCEBvA+O3BwwY="></script>
+    "oS6pY1ih3ZcneuSGQsWEDdDXpMa1+iLeL4UcuF8ynVQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"玉龍","description":"名前：玉龍\n獣龍種、玉龍科の基亜種。小さくて龍の仲間では随分と体が短いため玉龍といわれている。胴体が短くても他が長いので長細い印象をうけやすい。知らない人からはよく別の龍の雛と間違われる。小さいため他の種よりは飼いやすい。\n\n------------------------------------------\n季節に合わせてパート３！５月はこどもの日があるので鯉のぼりから｢滝を登った鯉が龍になる｣ってわけで小さな龍の子にしてみました。えっらいしっぽが長いです。ヒゲも長いです。\n\n身長約８０ｃｍと自分の作品では通常サイズです。\n\n動物的かわいいを追求した結果、ＶＲＣでフルトラッキングをするとたまに腰がおかしくなる。Ｖキャスで腕が微妙に伸びきらない場合があります。ご了承ください。(Ｖキャス側は大抵キャリブレーションを少し工夫するだけで落ち着く)\n------------------------------------------\n圧縮ファイルの中にＦＢＸ、ＶＲＭ、ＰＳＤ←（テクスチャ）が入っています。模様や色の改変、パーツの追加などご自由にどうぞです。\n\nＶＲＣに持って行きたい方はＶＲＭファイルをこちらの方のコンバーター(https://booth.pm/ja/items/1025226)を使うと簡単に入れられます。いつも助かっています。\n\nＲ指定がかかるようなものは基本的にＮＧです。\n商用利用は内容によりますので要相談ですが、公式放送に映っちゃった、テヘっ☆くらいは問題ありません。\n利用規約：https://docs.google.com/document/d/1Ak670A-tcKLZDcSHzh3lbfvl1ci1sMWAjaGc07EJTT8/edit?usp=sharing\n\nバーチャルキャストでの試着やクルクル回してさまざまな角度から確認したい人用にＴＨＥ ＳＥＥＤ ＯＮＬＩＮＥにモデルがございます(https://seed.online/items/c02248f41cd08d39b7ca12d85482a12db7b4c18d34684aeb485965b666bbb690)。改変したい！ＶＲＣに連れて行きたい！という方は購入してください。","url":"https://booth.pm/ja/items/1352300","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2500"},"image":"https://booth.pximg.net/c/620x620/69cf3447-8e42-4524-ba75-39d2133342d9/i/1352300/ca8ecd1d-9906-48cf-905c-9e759956eda5_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="FPTZSHdyQTgT+ms0SymKAWk+K3MjqZqCEBvA+O3BwwY="></script>
+    nonce="oS6pY1ih3ZcneuSGQsWEDdDXpMa1+iLeL4UcuF8ynVQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -652,7 +652,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;}]"
+    "[{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
